@startuml
title UC-DU-011 Data Feedback

'--- STYLE CONFIGURATION ---
skinparam class {
    BackgroundColor<<View>> LightBlue
    BackgroundColor<<ViewModel>> #D0F0F5
    BackgroundColor<<Controller>> #FFAB91
    BackgroundColor<<UseCase>> #FEFECD
    BackgroundColor<<Presenter>> #90EE90
    BackgroundColor<<Service>> #FAFAD2
    BackgroundColor<<DTO>> #D3D3D3
}

'--- VIEWS ---
class UserDatasetView <<View>> {
  +datasetId: int
  +build(BuildContext): Widget
}

class ShowCatalogView <<View>> {
  +viewModel: ShowCatalogViewModel
  +build(BuildContext): Widget
}

class DatasetCommentDialog <<View>> {
  +datasetId: int
  +build(BuildContext): Widget
}

class FeedbackListDialog <<View>> {
  +datasetId: int
  +build(BuildContext): Widget
}

class FeedbackDetailsDialog <<View>> {
  +feedbackId: int
  +build(BuildContext): Widget
}

'--- USE CASE & SERVICE ---
class FeedbackUseCase <<UseCase>> {
  +getUserFeedbackList(int datasetId): Future<List<NamedIdPair>>
  +getUserFeedbackDetails(int userFeedbackId): Future<UserFeedbackDetailsDto>
  +deleteUserFeedback(int userFeedbackId): Future<void>
}

class FeedbackService <<Service>> {
  +createUserFeedback(CreateUserFeedbackDto): Future<void>
  +getUserFeedbackList(int datasetId): Future<List<NamedIdPair>>
  +getUserFeedbackDetails(int userFeedbackId): Future<UserFeedbackDetailsDto>
  +deleteUserFeedback(int userFeedbackId): Future<void>
}

'--- DTOs ---
class CreateUserFeedbackDto <<DTO>> {
  +contactPoint: String
  +message: String
  +datasetId: int
}

class UserFeedbackDetailsDto <<DTO>> {
  +userFeedbackId: int
  +contactPoint: String
  +message: String
  +datasetId: int
}

class NamedIdPair <<DTO>> {
  +id: int
  +name: String
}

'--- RELATIONSHIPS ---
UserDatasetView ..> DatasetCommentDialog : opens >
ShowCatalogView ..> FeedbackListDialog : opens >
FeedbackListDialog ..> FeedbackDetailsDialog : opens >

DatasetCommentDialog ..> FeedbackUseCase : uses >
FeedbackListDialog ..> FeedbackUseCase : uses >
FeedbackDetailsDialog ..> FeedbackUseCase : uses >
FeedbackUseCase ..> FeedbackService : uses >

FeedbackService ..> CreateUserFeedbackDto
FeedbackService ..> UserFeedbackDetailsDto
FeedbackService ..> NamedIdPair

DatasetCommentDialog ..> CreateUserFeedbackDto : creates >
FeedbackListDialog ..> NamedIdPair : reads >
FeedbackDetailsDialog ..> UserFeedbackDetailsDto : reads >

@enduml
